[package]
name = "sylveon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
futures = "0.3.29"
glam = "0.24.2"
log = "0.4.20"
rand = "0.8.5"
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
