[package]
name = "sylveon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
# safely convert `Struct` into `&[u8]`
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3.30"
glam = { version = "0.25.0", features = ["bytemuck"] }
log = "0.4.20"
rand = "0.8.5"
wgpu = "0.18.0"
winit = { version = "0.29.8", features = ["rwh_05"] }
